# High-frequency-market-data-processor

./: .gitignore  CMakeLists.txt  README.md  TODO  build_and_run.sh  data_collection.py  vcpkg.json
include/: common.h  dotenv_loader.h
src/: main.cpp
src/data/: AAPL_jsonIntradayFileTale.json
